--- a/video.html
+++ b/video.html
@@ -33,7 +33,8 @@
           data-setup="{}"
         >
         
-          <source  src="test.mp4" type="video/mp4"/>
+<!--           <source  src="test.mp4" type="video/mp4"/> -->
+             <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" />
 
           <track src="angrynewvideopartner.srt" label="English" kind="captions" srclang="en-us" default >
             <track src="/French_captions_file.vtt" label="French" kind="subtitles" srclang="fr" >
